# add-watermark

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: RELEASING.md
examples/: generate_examples.py
src/watermarker/: __init__.py  __main__.py  cli.py  engine.py
tests/: test_cli_version.py  test_integration.py  test_opacity.py  test_positions.py
